[project]
name = "forecast-discussion-notifier"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joel Heaps", email = "joel@joelheaps.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "msgspec>=0.18.6",
    "lxml>=5.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.10",
    "pytest>=8.2.2",
]
