[project]
name = "noaa-notifier"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Joel Heaps", email = "joel@joelheaps.com" }]
dependencies = [
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "lxml>=5.2.2",
    "schedule>=1.2.2",
    "pydantic>=2.7.4",
    "feedparser>=6.0.11",
]
readme = "README.md"
license = { text = "MIT" }

[tool.ruff.lint]
# Enable all rules, with exceptions
select = ["ALL"]
ignore = ["D", "S101", "ANN101", "ANN102", "COM812", "ISC001", "ERA001", "T201", "PGH003"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
