[project]
name = "spc-notifier"
version = "0.1.0"
description = "Generates Discord messages for new NOAA Storm Prediction Center products."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "lxml>=5.2.2",
    "schedule>=1.2.2",
    "pydantic>=2.7.4",
    "feedparser>=6.0.11",
    "stamina>=25.1.0",
    "tomli>=2.2.1",
]

[tool.ruff.lint]
# Enable all rules, with exceptions
select = ["ALL"]
ignore = [
    "D",
    "S101",
    "ANN101",
    "ANN102",
    "COM812",
    "ISC001",
    "ERA001",
    "T201",
    "PGH003",
    "E501",
    "FBT001",
    "FBT002",
    "TCH001",
    "TCH003"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
